[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blastochor"
version = "0.1.1"
authors = [
	{name = "Lucy Schrader", email = "lucy@schrader.nz"},
]
description = "Harvest, transform, and export data from Te Papa's collections API."
readme = "README.md"
keywords = ["python", "museum", "api"]
requires-python = ">=3.7"
license = {text = "MIT License"}
classifiers=[
	"Development Status :: 4 - Beta",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Education",
	"Programming Language :: Python :: 3",
	"Natural Language :: English",
]

[project.urls]
"Homepage" = "https://github.com/lucyschrader/Blastochor"